--- a/Index.css
+++ b/Index.css
@@ -1,8 +1,9 @@
+/*Contact Form Section*/
 
 h1 {
   text-align: left;
   text-transform: uppercase;
-  color: #9b1b86;
+  color: #0d0522;
   font-family:Lucida Handwriting;
 }
 
@@ -16,7 +17,7 @@ h2 {
 input[type=text], select, textarea {
     width: 100%; 
     padding: 12px;
-    border: 1px solid rgb(70, 179, 76);
+    border: 1px solid rgb(179, 119, 70);
     border-radius: 20px;
     box-sizing: border-box; 
     margin-top: 2px; 
@@ -26,7 +27,7 @@ input[type=text], select, textarea {
   
  
   input[type=submit] {
-    background-color: #29be35;
+    background-color: #9c4c27;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -36,15 +37,96 @@ input[type=text], select, textarea {
   
   
   input[type=submit]:hover {
-    background-color: #b650a5;
+    background-color: #c3dd31;
   }
   
  
   .container {
-    border-radius: 10px;
-    background-color: #999497;
+    border-radius: 20px;
+    background-color: #e7e69d;
     padding: 20px;
+  
+  }
+
+
+  /*About Section*/
+
+
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+  }
+  
+  html {
+    box-sizing: content-box;
+  }
+  
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+  
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+  
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(228, 203, 94, 0.2);
+    margin: 8px;
+    background-color: #522e05;
+    color:rgb(255, 255, 255)
+  }
+  
+  .about-section {
+    padding: 50px;
+    text-align: center;
+    background-color: #f07127;
+    color: rgb(255, 255, 255)
     
-
-
+  }
+  
+  .our-mission{
+    padding: 50px;
+    text-align: center;
+    background-color: #d1f508;
+    color: rgb(255, 255, 255)
+    
+  }
+  .container {
+    padding: 0 16px;
+  }
+  
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  .title {
+    color: white;
+  }
+  
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  .button:hover {
+    background-color: #555;
+  }
+  
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
   }
