--- a/Index.css
+++ b/Index.css
@@ -1,56 +1,3 @@
-/*Contact Form Section*/
-
-h1 {
-  text-align: left;
-  text-transform: uppercase;
-  color: #0d0522;
-  font-family:Lucida Handwriting;
-}
-
-h2 {
-  text-align: left;
-  text-transform: lowercase;
-  color: #067722;
-  font-family:papyrus;
-}
-
-input[type=text], select, textarea {
-    width: 100%; 
-    padding: 12px;
-    border: 1px solid rgb(179, 119, 70);
-    border-radius: 20px;
-    border-color: #1b9b3b;
-    border-style: double;
-    box-sizing: border-box; 
-    margin-top: 2px; 
-    margin-bottom: 4px; 
-    resize: vertical 
-  }
-  
- 
-  input[type=submit] {
-    background-color: #55b43d;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  
-  input[type=submit]:hover {
-    background-color: #c3dd31;
-  }
-  
- 
-  .container {
-    border-radius: 20px;
-    border-top: #1b9b3b;
-    background-color: #f0eaa0;
-    padding: 20px;
-  
-  }
-
 
   /*About Section*/
 
@@ -61,7 +8,9 @@ input[type=text], select, textarea {
   }
   
   html {
-    box-sizing: content-box;
+    box-sizing: border-box;
+    background-color: black;
+    color: white;
   }
   
   *, *:before, *:after {
@@ -70,31 +19,35 @@ input[type=text], select, textarea {
   
   .column {
     float: left;
-    width: 33.3%;
-    margin-bottom: 16px;
+    width: 20%;
+    margin-bottom: 10px;
     padding: 0 8px;
   }
   
   .card {
     box-shadow: 0 4px 8px 0 rgba(228, 203, 94, 0.2);
     margin: 8px;
-    background-color: #078618;
-    color:rgb(255, 255, 255)
+    background-color: blueviolet;
+    color:rgb(255, 255, 255);
   }
   
   .about-section {
     padding: 50px;
-    text-align: center;
-    background-color: #f07127;
-    color: rgb(255, 255, 255)
+    text-align:center;
+    background-color:aquamarine;
+    color: black;
     
   }
   
   .our-mission{
     padding: 50px;
     text-align: center;
-    background-color: #d1f508;
-    color: rgb(255, 255, 255)
+  background-image: url(Images/mission\ 1.jpg);
+  background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      opacity: 0.6;
+      color: black;
     
   }
   .container {
@@ -132,124 +85,7 @@ input[type=text], select, textarea {
       width: 100%;
       display: block;
     }
-
+  
+}
  /*Footer: Contact Section*/
-    .fa {
-      padding: 20px;
-      font-size: 30px;
-      width: 50px;
-      text-align: center;
-      text-decoration: none;
-      margin: 5px 2px;
-    }
-    
-    .fa:hover {
-        opacity: 0.7;
-    }
-    
-    .fa-facebook {
-      background: #3B5998;
-      color: white;
-    }
-    
-    .fa-twitter {
-      background: #55ACEE;
-      color: white;
-    }
-    
-    .fa-google {
-      background: #dd4b39;
-      color: white;
-    }
-    
-    .fa-linkedin {
-      background: #007bb5;
-      color: white;
-    }
-    
-    .fa-youtube {
-      background: #bb0000;
-      color: white;
-    }
-    
-    .fa-instagram {
-      background: #125688;
-      color: white;
-    }
-    
-    .fa-pinterest {
-      background: #cb2027;
-      color: white;
-    }
-    
-    .fa-snapchat-ghost {
-      background: #fffc00;
-      color: white;
-      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    }
-    
-    .fa-skype {
-      background: #00aff0;
-      color: white;
-    }
-    
-    .fa-android {
-      background: #a4c639;
-      color: white;
-    }
-    
-    .fa-dribbble {
-      background: #ea4c89;
-      color: white;
-    }
-    
-    .fa-vimeo {
-      background: #45bbff;
-      color: white;
-    }
-    
-    .fa-tumblr {
-      background: #2c4762;
-      color: white;
-    }
-    
-    .fa-vine {
-      background: #00b489;
-      color: white;
-    }
-    
-    .fa-foursquare {
-      background: #45bbff;
-      color: white;
-    }
-    
-    .fa-stumbleupon {
-      background: #eb4924;
-      color: white;
-    }
-    
-    .fa-flickr {
-      background: #f40083;
-      color: white;
-    }
-    
-    .fa-yahoo {
-      background: #430297;
-      color: white;
-    }
-    
-    .fa-soundcloud {
-      background: #ff5500;
-      color: white;
-    }
-    
-    .fa-reddit {
-      background: #ff5700;
-      color: white;
-    }
-    
-    .fa-rss {
-      background: #ff6600;
-      color: white;
-    }
-  }
+
